--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charser="utf-8">
     <title>Test Github Hosting</title>
+    <link rel="stylesheet" type="text/css" href="my-style.css">
   </head>
   <body>
     <p>sample paragraph...</p>
